# refresh_python_second_book

./: .gitignore  fibbonaci.py  tuto_01.py  tuto_02.py  tuto_02.txt  tuto_04.py  tuto_05.py  tuto_06.py  tuto_07.py  tuto_08.py  tuto_09.py  tuto_10.py
advanced/: config.ini  pasos.txt  tuto_11.py  tuto_12.py  tuto_13.py  tuto_14.py
importacionMasiva/: __init__.py  tuto_03.py
packagingPcInfo/: LICENSE  pyproject.toml
packagingPcInfo/src/pc_info_setxh/: example.py
