[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pc_info_setxh"
version = "1.0.0"
authors = [
  { name="Nicolas Lavanderos", email="n.lavanderosflores@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"